# Baza_Danych_Projekt

./: .gitignore  BazaAbstract.cpp  BazaAbstract.h  BazaDanych.cpp  BazaDanych.h  BazaJson.cpp  BazaJson.h  CMakeLists.txt  database.h  database.json  diagram_klas.txt  dodawanie_rekordu.cpp  dodawanie_rekordu.h  dodawanie_rekordu.ui  edit.cpp  edit.h  edit.ui  film.cpp  film.h  ksiazka.cpp  ksiazka.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.qmodel  plik.cpp  plik.h  qplik.cpp  qplik.h  use_case.txt
UT/: CMakeLists.txt  main.cpp  tst_test1.cpp
